mejorando el nav-aside (aun falta optimizar mas)

--- a/templates/Descripcion.html
+++ b/templates/Descripcion.html
@@ -6,8 +6,7 @@
             <div class="container">
                 <div class="row app_margen app-caja">
                     <div class="col-xs-6 app-centrar">
-                        <img src="{{STATIC_URL}}{{producto.img}}" class="img-responsive">
-                        {{producto.img}}
+                        <img src="{{MEDIA_URL}}{{producto.img}}" class="img-responsive">
                     </div>
                     <div class="col-xs-6">
                         <div>
