--- a/templates/base.html
+++ b/templates/base.html
@@ -68,12 +68,12 @@
                     </li>
                     <li id="amarillo">
                        <div>
-                        <a href="oficina.html">Utiles de Oficina</a>
+                        <a href="/utiles_oficina/">Utiles de Oficina</a>
                        </div>
                     </li>
                     <li id="morado">
                        <div>
-                         <a href="regalos.html">Regalos</a>
+                         <a href="/regalos/">Regalos</a>
                        </div>
                     </li>
                     <li id="agua">
