--- a/templates/Productos.html
+++ b/templates/Productos.html
@@ -95,75 +95,90 @@
                 });
             }
     function inicio()
-    {
-        $(".sub").on('click', mostrarProductos);
-        $(".mi").on('click', mostrarCategorias);    //Click sobre categoria, activa funcion mostrarCategoria
+    {   
+        $(".sub").on('click', {id:0}, mostrarProductos);
+        $(".mi").on('click', {id:1}, mostrarProductos);    //Click sobre categoria, activa funcion mostrarCategoria
 
         
     }
 
     /*---- Funciones desplegar subcategorias de cada categoria -> Jhon Medina ----*/
 
-    function mostrarCategorias(){
+    /*function mostrarCategorias(){
         var cat = $(this);                          //Seleccionando el mismo elemento de clase .mi
         var id_cat = cat.attr('id');                //Obtener el valor de id, de clase .mi
 
         $('.list_hija').eq(id_cat-1).toggle(500);   //Desplazando la clase .list_hija
 
-        /*var tam=$('.list_hija').eq(id_cat-1).height();
-
+        var tam=$('.list_hija').eq(id_cat-1).height()
         console.log(tam);
 
-        if(tam>=184){
-            $('.list_hija').eq(id_cat-1).css({'overflow-x':'hidden','height':'240px'});
-            console.log('entre');
-        }*/
-
-    }
+    }*/
     /*-----------------------------------------------------------------------------*/
  
-    function mostrarProductos(){
-        var info = $(this);
-        var id = info.attr('id');
-        console.log(id);
-        
+    function mostrarProductos(valor){
 
-        $.ajax({
-        url: "/ajax/ver_subcategoria/",
-        type: "POST",
-        data:{'id':id},
-        success: function(data) {
-            html = "";
-            //console.log(data);
-            for(i=0;i< data.length;i++){
-                html += "<div class='col-xs-3'id ='"+data[i].pk+"'>";
-                html += "<div class='img-thumbnail app_padding'>";
-                html += "<div class='app_alinear'>";
-                html += "<h5 >"+data[i].fields.nombre+"</h5>";
-                html += "</div>";
-                html += "<img src='{{MEDIA_URL}}"+ data[i].fields.img+"' class='img-responsive'>";
-                html += "<div class='app_alinear app_centrar'>";
-                html += "<h5>"+ data[i].fields.precio+"</h5>";
-                html += "<form action=''>";
-                html += "<div class='app-div1'>";
-                html += "<input type='text' name='cantidad' id='cantidad' class='app_cantidad'>";
-                html += "</div>";
-                html += "<div class='app-div2'>";
-                html += "<input type='submit' name='agregar' id='agregar' value='Agregar' class='app_agregar'>"
-                html += "</div>";
-                html += "</form>";
-                html += "</div>";
-                html += "</div>";
-                html += "</div>";
-            }
-            
-        $(".col-xs-9").html(html);
-           
-        },
-        error: function(data){
-                console.log(data);
+        if(valor.data.id==0){
+            var info = $(this);
+            var id = info.attr('id');
+            console.log(id);
+
+            $.ajax({
+            url: "/ajax/ver_subcategoria/",
+            type: "POST",
+            data:{'id':id},
+            success: function(data) {
+                html = "";
+                //console.log(data);
+                for(i=0;i< data.length;i++){
+                    html += "<div class='col-xs-3'id ='"+data[i].pk+"'>";
+                    html += "<div class='img-thumbnail app_padding'>";
+                    html += "<div class='app_alinear'>";
+                    html += "<h5 >"+data[i].fields.nombre+"</h5>";
+                    html += "</div>";
+                    html += "<img src='{{MEDIA_URL}}"+ data[i].fields.img+"' class='img-responsive'>";
+                    html += "<div class='app_alinear app_centrar'>";
+                    html += "<h5>"+ data[i].fields.precio+"</h5>";
+                    html += "<form action=''>";
+                    html += "<div class='app-div1'>";
+                    html += "<input type='text' name='cantidad' id='cantidad' class='app_cantidad'>";
+                    html += "</div>";
+                    html += "<div class='app-div2'>";
+                    html += "<input type='submit' name='agregar' id='agregar' value='Agregar' class='app_agregar'>"
+                    html += "</div>";
+                    html += "</form>";
+                    html += "</div>";
+                    html += "</div>";
+                    html += "</div>";
                 }
-        });
+                
+            $(".col-xs-9").html(html);
+               
+            },
+            error: function(data){
+                    console.log(data);
+                    }
+            });
+        }
+
+        else if(valor.data.id==1){
+            var cat = $(this);                          //Seleccionando el mismo elemento de clase .mi
+            var id_cat = cat.attr('id');                //Obtener el valor de id, de clase .mi
+
+            $('.list_hija').eq(id_cat-1).toggle(500);   //Desplazando la clase .list_hija
+
+            var tam = $('.list_hija').eq(id_cat-1).height();
+
+            if(tam>184){
+                $('.list_hija').eq(id_cat-1).addClass('scrollando');
+            }
+
+            else{
+                console.log('no lo soy');
+            }
+        }
+
+        
     }
 
 </script>
