--- a/templates/index.html
+++ b/templates/index.html
@@ -29,6 +29,7 @@
                                     </div>
                                     <div class="app_margen1">
                                         <input type="email" name="miemail" id="miemail" placeholder="email" class="app_input">
+                                        <input type="text" name="nombre" id="text_nombre" placeholder="nombre" class="app_input">
                                         <button id="suscribirse" class="btn btn-primary" > Enviar </button>
                                     </div>
                                 </div>
