--- a/templates/Descripcion.html
+++ b/templates/Descripcion.html
@@ -26,7 +26,7 @@
                                     <input type="text" name="cantidad" id="cantidad" class="app_cantidad">
                                 </div>
                                 <div class="app-div2">
-                                    <button class="carrito app_agregar" id="agregar" value="{{producto.id}}">Añadir carrito</button>
+                                    <button class="carrito app_agregar" id="agregar" value="{{producto.id}}">Añadir</button>
                                 </div>
                             
                               {% endif %} 
