--- a/templates/index.html
+++ b/templates/index.html
@@ -115,9 +115,9 @@
             <section class="app_lista2">
                 <div class="container">
                 {% for x in otros %}
-                    <div class="row app_margen">
+                    <div class="row">
                     {% for y in x  %}
-                        <div class="col-xs-3">
+                        <div class="col-xs-3 app_margen">
                             <div class="img-thumbnail app_padding">
                                 <div class="app_alinear nombre">
                                      <span>{{y.nombre}}</span>
