--- a/templates/Productos.html
+++ b/templates/Productos.html
@@ -51,7 +51,7 @@
                                             </div>
                                         </form>
                                     </div>
-                                </div>
+                                </div><br><br>
                             </div>
                             {% endfor %}
                     </div>
