--- a/templates/Productos.html
+++ b/templates/Productos.html
@@ -40,7 +40,7 @@
                                         <h5 >{{k.nombre}}</h5>
                                     </div>
                                     <div class="caja_imagen">
-                                        <a href="#"><img src="{{MEDIA_URL}}{{k.img}}" class="img-responsive img_producto"><span class="info">Ver</span></a>
+                                        <a href="/productos/{{k.id}}"><img src="{{MEDIA_URL}}{{k.img}}" class="img-responsive img_producto"><span class="info">Ver</span></a>
                                     </div>
                                     
                                     <div class="app_alinear app_centrar">
