--- a/templates/Productos.html
+++ b/templates/Productos.html
@@ -124,7 +124,8 @@
                     html += "<div class='app_alinear'>";
                     html += "<h5 >"+data[i].fields.nombre+"</h5>";
                     html += "</div>";
-                    html += "<img src='{{MEDIA_URL}}"+ data[i].fields.img+"' class='img-responsive'>";
+                    html += "<div class='caja_imagen'>
+                                        <a href='#'><img src='{{MEDIA_URL}}"+data[i].fields.img+"' class='img-responsive img_producto'><span class='info'>Ver</span></a>";
                     html += "<div class='app_alinear app_centrar'>";
                     html += "<h5>"+ data[i].fields.precio+"</h5>";
                     html += "<form action=''>";
