--- a/templates/Productos.html
+++ b/templates/Productos.html
@@ -20,7 +20,7 @@
                                 <li class="list"><p class="mi" id='{{i.id}}'>{{i.categoria}} <span class="glyphicon glyphicon-chevron-right sh"></span></p>
                                 <ul class=" list_hija">
                                     {% for j in i.sub %}
-                                        <li class = 'sub' id= '{{j.id}}'> {{j.nombre}} </li>
+                                        <li class = 'sub' id= '{{j.id}}'> {{j.nombre}}j </li>
                                         {% empty %}
                                         <li>no hay sub</li>
                                         {% endfor %}
@@ -124,8 +124,8 @@
                     html += "<div class='app_alinear'>";
                     html += "<h5 >"+data[i].fields.nombre+"</h5>";
                     html += "</div>";
-                    html += "<div class='caja_imagen'>
-                                        <a href='#'><img src='{{MEDIA_URL}}"+data[i].fields.img+"' class='img-responsive img_producto'><span class='info'>Ver</span></a>";
+                    html += "<div class='caja_imagen'>";
+                    html += "<a href='#'><img src='{{MEDIA_URL}}"+data[i].fields.img+"' class='img-responsive img_producto'><span class='info'>Ver</span></a></div>";
                     html += "<div class='app_alinear app_centrar'>";
                     html += "<h5>"+ data[i].fields.precio+"</h5>";
                     html += "<form action=''>";
