--- a/templates/Descripcion.html
+++ b/templates/Descripcion.html
@@ -61,7 +61,7 @@ function añadircarrito()
         url:'/ajax_carrito/',
         success: function (data)
         {
-         console.log(data)
+         console.log(" "+data["nombre"]+" "+data["precio"]);
         }
       });
     
