--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
 
                         <div class="col-xs-4">
 
-                                <div class="img-thumbnail centrar" id = "ventana-mensaje">
+                                <div class="img-responsive centrar" id = "ventana-mensaje">
                                     <div class="app_margen1">
                                         <span>Recibe nuestras ofertas</span>
                                         <p class="app-correo" >Déjanos tu email!!!</p>
