--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -226,6 +226,7 @@ img {
   display: block;
   max-width: 100%;
   height: auto;
+  background-color: #ffffff;
 }
 .img-rounded {
   border-radius: 6px;
