--- a/templates/Descripcion.html
+++ b/templates/Descripcion.html
@@ -4,7 +4,7 @@
 
         <section class="app_descripcion">
             <div class="container">
-                <div class="row app_margen app-caja">
+                <div class="row app_margen">
                     <div class="col-xs-6 app-centrar">
                         <img src="{{MEDIA_URL}}{{producto.img}}" class="img-responsive">
                     </div>
@@ -35,6 +35,52 @@
                     </div>
                 </div>
             </div>
+        </section>
+
+        <section class="app_envios">
+                <div class="container">
+                    <div class="row app_margen">
+                        <div class="col-xs-4">
+                            <div class="row">
+                                <div class="col-xs-3">
+                                    <div class="app_font3">
+                                        <span class="icon-truck app-icon1"></span>
+                                    </div>
+                                </div>
+                                <div class="col-xs-9">
+                                    <h3>¿Me lo envian?</h3>
+                                    <p>Si!! hacemos envios a todo Trujillo. Muy pronto a nivel Nacional</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xs-4">
+                            <div class="row">
+                                <div class="col-xs-3">
+                                    <div class="app_font3">
+                                        <span class="icon-credit app-icon2"></span>
+                                    </div>
+                                </div>
+                                <div class="col-xs-9">
+                                    <h3>¿Cómo Pago?</h3>
+                                    <p>Paga con cualquier tarjeta de credito o débito. Compras 100% seguras!.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xs-4">
+                            <div class="row">
+                                <div class="col-xs-3">
+                                    <div class="app_font3">
+                                        <span class="icon-mail2 app-icon3"></span>
+                                    </div>
+                                </div>
+                                <div class="col-xs-9">
+                                    <h3>¿Me Ayudan?</h3>
+                                    <p>Contáctanos enviando un mensaje al correo hola@empresa.com</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
         </section>
 
     {% endblock %}
