--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,6 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
 
-        <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Tangerine">
         <link rel="stylesheet" href="{{STATIC_URL}}css/bootstrap.min.css">
         <link rel="stylesheet" href="{{STATIC_URL}}css/normalize.min.css">
         <link rel="stylesheet" href="{{STATIC_URL}}css/main.css">
@@ -30,14 +29,15 @@
                 <div class="row">
                     <div class="col-xs-8">
                         <div class="app_logo">
-                            <p class="app_title">La Empresa</p>
+                            <img src="{{STATIC_URL}}img/logo.png">
+                            <h1 class="app_title">Bach</h1>
                         </div>
                     </div>
                     <div class="col-xs-2">
                         <div class="app_font1">
-                            <a href="#" class="app_link"><span class="icon-twitter"></span></a>
-                            <a href="#" class="app_link"><span class="icon-facebook"></span></a>
-                            <a href="#" class="app_link"><span class="icon-google-plus"></span></a>
+                            <a href="#" class="app_link"><span class="icon-twitter twitter"></span></a>
+                            <a href="#" class="app_link"><span class="icon-facebook facebook"></span></a>
+                            <a href="#" class="app_link"><span class="icon-google-plus google"></span></a>
                         </div>
                     </div>
                     <div class="col-xs-2">
