--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,6 @@
                 <div class="container">
                     <div class="row app_margen">
                         <div class="col-xs-8">
-
                             <div class="banner">
                                 <ul>
                                     <li style="background-image:url({{STATIC_URL}}img/slider1.png);"></li>
@@ -16,12 +15,9 @@
                                     <li style="background-image:url({{STATIC_URL}}img/slider3.png);"></li>
                                 </ul>
                             </div>
-                            
-
                         </div>
 
                         <div class="col-xs-4">
-
                                 <div class="img-responsive centrar" id = "ventana-mensaje">
                                     <div class="app_margen1">
                                         <span>Recibe nuestras ofertas</span>
@@ -61,8 +57,6 @@
                 </div>   
             </section>
 
-
-
             <section class="app_envios">
                 <div class="container">
                     <div class="row app_margen">
@@ -70,7 +64,7 @@
                             <div class="row">
                                 <div class="col-xs-3">
                                     <div class="app_font3">
-                                        <span class="icon-truck"></span>
+                                        <span class="icon-truck app-icon1"></span>
                                     </div>
                                 </div>
                                 <div class="col-xs-9">
@@ -83,7 +77,7 @@
                             <div class="row">
                                 <div class="col-xs-3">
                                     <div class="app_font3">
-                                        <span class="icon-credit"></span>
+                                        <span class="icon-credit app-icon2"></span>
                                     </div>
                                 </div>
                                 <div class="col-xs-9">
@@ -96,7 +90,7 @@
                             <div class="row">
                                 <div class="col-xs-3">
                                     <div class="app_font3">
-                                        <span class="icon-mail2"></span>
+                                        <span class="icon-mail2 app-icon3"></span>
                                     </div>
                                 </div>
                                 <div class="col-xs-9">
